<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="7"
    android:background="@android:color/holo_green_light"
    android:baselineAligned="false">


    <LinearLayout
        android:id="@+id/key_board_screen_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.8"
        android:background="@color/faintblack"
        android:orientation="vertical"
        android:weightSum="5.2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@color/dialog_background">

            <TextView
                android:id="@+id/numberTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/button_style_material_normal"
                android:contentDescription="@string/action_settings"
                android:state_pressed="true"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/key_board_screen_layout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/faintblack"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_style_material_normal"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_style_material_normal"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_style_material_normal"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/key_board_screen_layout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/faintblack"
            android:weightSum="3">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_style_material_normal"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_style_material_normal"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_style_material_normal"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/key_board_screen_layout11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/faintblack"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/key_board_screen_layout15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/faintblack"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/key_board_screen_layout12"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/faintblack"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_style_material_normal"
                        android:text="@string/seven"
                        android:textColor="@color/white"
                        android:textSize="@dimen/Entry_Button_txt_Size" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_style_material_normal"
                        android:text="@string/eight"
                        android:textColor="@color/white"
                        android:textSize="@dimen/Entry_Button_txt_Size" />

                    <Button
                        android:id="@+id/button9"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_style_material_normal"
                        android:text="@string/nine"
                        android:textColor="@color/white"
                        android:textSize="@dimen/Entry_Button_txt_Size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/key_board_screen_layout14"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/faintblack"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/button0"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_style_material_normal"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="@dimen/Entry_Button_txt_Size" />

                    <Button
                        android:id="@+id/buttonDOT"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_style_material_normal"
                        android:text="."
                        android:textColor="@color/white"
                        android:textSize="@dimen/Entry_Button_txt_Size" />

                    <Button
                        android:id="@+id/buttonClear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_style_material_normal"
                        android:text="C"
                        android:textColor="@color/white"
                        android:textSize="@dimen/Entry_Button_txt_Size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- <paper-button>OkButtonCalculate</paper-button> -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@color/dialog_background"
            android:gravity="bottom|right">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_style_material_normal"
                android:contentDescription="@string/action_settings"
                android:state_pressed="true"
                android:text="CANCEL"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/OkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toRightOf="@id/cancelButton"
                android:background="@drawable/button_style_material_normal"
                android:contentDescription="@string/action_settings"
                android:state_pressed="true"
                android:text="OK"
                android:textColor="@color/white"
                android:textSize="@dimen/Entry_Button_txt_Size"
                android:textStyle="bold" />


        </RelativeLayout>


    </LinearLayout>
</LinearLayout>

